<resources>
    <string name="app_name">Countmatic</string>
    <string name="counter_body">Counter Body</string>
    <string name="preference_key">zecho.countmatic.preference_key</string>
    <string name="screen">screen</string>
    <string name="step_info">Steps: How much count is increased each time.</string>
    <string name="reset_info">Reset: To reset the counter and steps to default value.</string>
    <string name="note"><i>Copyright </i><b>\u00A9</b></string>
    <string name="tally_tite">untitled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_message">You have not saved anything yet</string>
    <string name="help_dialog_message"><b>◆ Steps:</b> How much count is increased each time.
        \n\n<b>◆ Count: </b>Tap it to count
        \n\n<b>◆ Save icon:</b> If you wish to save your current count press the save icon and name it.
        \n\n<b>◆ List:</b> When you save anything it will be showed in the list, tap on it if you wish to continue that count. Tap on cross \"X\" to delete it.</string>
</resources>