<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="@dimen/parent_pad"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/info"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/counter_body"
        android:src="@drawable/body" />

    <ImageView
        android:id="@+id/iv_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_body"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/screen"
        android:src="@drawable/screen" />

    <Button
        android:id="@+id/btn_down"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/iv_screen"
        android:layout_alignStart="@id/iv_screen"
        android:layout_alignLeft="@id/iv_screen"
        android:background="@drawable/down_button"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_up"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/iv_screen"
        android:layout_toRightOf="@id/btn_down"
        android:background="@drawable/up_button"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_below="@id/iv_screen"
        android:layout_alignRight="@id/iv_screen"
        android:background="@drawable/reset_button"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/btn_up"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/count_button"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_up"
        android:layout_alignLeft="@id/btn_down"
        android:layout_alignRight="@id/btn_up"
        android:gravity="center"
        android:text="Steps"
        android:textColor="#fff"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reset"
        android:layout_alignLeft="@id/btn_reset"
        android:layout_alignRight="@id/btn_reset"
        android:gravity="center"
        android:text="Reset"
        android:textColor="#fff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/iv_screen"
        android:layout_alignRight="@id/iv_screen"
        android:layout_alignBottom="@id/iv_screen"
        android:fontFamily="@font/font"
        android:gravity="right"
        android:paddingHorizontal="10dp"
        android:text="0000."
        android:textColor="#000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/iv_screen"
        android:layout_alignTop="@id/iv_screen"
        android:fontFamily="@font/font"
        android:gravity="left"
        android:paddingHorizontal="10dp"
        android:text="Steps:"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_steps_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_steps"
        android:layout_alignLeft="@id/tv_steps"
        android:fontFamily="@font/font"
        android:paddingHorizontal="10dp"
        android:text="01"
        android:textColor="#000"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_info"
            android:textColor="@color/info"
            android:fontFamily="@font/font"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_info"
            android:textColor="@color/info"
            android:fontFamily="@font/font"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/note"
            android:textAlignment="center"
            android:textColor="@color/info"
            android:fontFamily="@font/font"
            android:textSize="@dimen/info_textSize" />

    </LinearLayout>


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2518239693090273/9388667605">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>